improve ball code

--- a/node_tennis/Dockerfile
+++ b/node_tennis/Dockerfile
@@ -2,7 +2,6 @@ FROM node
 
 RUN \
   npm -g install \
-#    socket.io@1.7.4 \
     socket.io@2.1.1 \
     express@4.16.4 \
     redis@2.8.0
@@ -10,6 +9,6 @@ RUN \
 ADD \
   websocket-tennis /websocket-tennis
 
-WORKDIR websocket-tennis
+WORKDIR /websocket-tennis
 
 CMD node app.js
