--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,38 +5,36 @@ services:
     build: 
       context: r_tennis
     environment:
-      - WHOAMI=umpire
-      - MYNUMBER=1
       - VERBOSE=1
     depends_on: 
       - redis
+    command: Rscript umpire.r
   r_ball_1:
     build: 
       context: r_tennis
     environment:
-      - WHOAMI=ball
-      - MYNUMBER=1
       - VERBOSE=1
     depends_on: 
       - redis
+    command: Rscript ball.r
   r_player_1:
     build: 
       context: r_tennis
     environment:
-      - WHOAMI=player
       - MYNUMBER=1
       - VERBOSE=1
     depends_on: 
       - redis
+    command: Rscript player.r
   r_player_2:
     build: 
       context: r_tennis
     environment:
-      - WHOAMI=player
       - MYNUMBER=2
       - VERBOSE=1
     depends_on: 
       - redis
+    command: Rscript player.r
   redis:
     image: redis
     environment:
