--- a/node_tennis/Dockerfile
+++ b/node_tennis/Dockerfile
@@ -6,9 +6,12 @@ RUN \
     express@4.16.4 \
     redis@2.8.0
 
-ADD \
-  websocket-tennis /websocket-tennis
+RUN \
+  mkdir -p /app/node_tennis
 
-WORKDIR /websocket-tennis
+ADD \
+  websocket-tennis /app/node_tennis/websocket-tennis
+
+WORKDIR /app/node_tennis/websocket-tennis
 
 CMD node app.js
