--- a/docker-compose-with-volumes.yaml
+++ b/docker-compose-with-volumes.yaml
@@ -9,6 +9,8 @@ services:
     depends_on:
       - redis
     command: Rscript umpire.r
+    volumes:
+    - ./r_tennis:/app/r_tennis
   r_ball_1:
     build:
       context: r_tennis
@@ -17,6 +19,8 @@ services:
     depends_on:
       - redis
     command: Rscript ball.r
+    volumes:
+    - ./r_tennis:/app/r_tennis
   r_player_1:
     build:
       context: r_tennis
@@ -26,6 +30,8 @@ services:
     depends_on:
       - redis
     command: Rscript player.r
+    volumes:
+    - ./r_tennis:/app/r_tennis
   r_player_2:
     build:
       context: r_tennis
@@ -35,6 +41,8 @@ services:
     depends_on:
       - redis
     command: Rscript player.r
+    volumes:
+    - ./r_tennis:/app/r_tennis
   redis:
     image: redis
     environment:
@@ -48,3 +56,5 @@ services:
       - redis
     environment:
       - NODE_PATH=/usr/local/lib/node_modules
+    volumes:
+    - ./node_server:/app/node_server
