--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,32 +9,32 @@ services:
     depends_on:
       - redis
     command: Rscript umpire.r
-  r_ball_1:
+  go_ball_1:
     build:
-      context: r_tennis
+      context: go_tennis
     environment:
       - VERBOSE=1
     depends_on:
       - redis
-    command: Rscript ball.r
+    command: go run ball.go
   r_player_1:
     build:
       context: r_tennis
     environment:
       - MYNUMBER=1
-      - VERBOSE=1
+      - VERBOSE=0
     depends_on:
       - redis
     command: Rscript player.r
-  r_player_2:
+  python_player_2:
     build:
-      context: r_tennis
-    environment:
+      context: python_tennis
+    environment: 
       - MYNUMBER=2
       - VERBOSE=1
     depends_on:
       - redis
-    command: Rscript player.r
+    command: python player.py
   redis:
     image: redis
     environment:
