--- a/python_tennis/Dockerfile
+++ b/python_tennis/Dockerfile
@@ -1,6 +1,8 @@
-FROM python
+FROM python:3.8
 
-RUN pip install redis numpy
+RUN pip install \
+  redis==3.4.1 \
+  numpy==1.18.2
 
 RUN \
   mkdir -p /app/python_tennis
